[package]
name = "undocker"
version = "0.1.0"
authors = ["Zoe <hi@zoe.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.11"
clap = "2.33.0"
chrono = "0.4"
lazy_static = "1.1.0"
termcolor = "1.0.4"
serde = "1.0.102"
lettre = "0.9"
lettre_email = "0.9"